# shashin

./: CLAUDE.md  Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix
module/: default.nix
src/: config.rs  gallery.rs  input.rs  lib.rs  main.rs  mcp.rs  metadata.rs  render.rs  scripting.rs  viewer.rs
src/platform/: mod.rs
src/platform/macos/: mod.rs
