[package]
name = "shashin"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Shashin (写真) — screenshot tool for macOS and Linux"
homepage = "https://github.com/pleme-io/shashin"
repository = "https://github.com/pleme-io/shashin"
readme = "README.md"
license = "MIT"
categories = ["os::macos-apis"]
keywords = ["screenshot", "capture", "macos", "annotation"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
shikumi = { git = "ssh://git@github.com/pleme-io/shikumi" }
arc-swap = "1.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
image = "0.25"
dirs = "6.0"
